commit plugin for middle version
Change-Id: I0c0b18370db1bb209a27d6e6cf287bd0e586cdef
Signed-off-by: li levi <levi.li@sap.com>